--- a/projects/templates/projects/project_index.html
+++ b/projects/templates/projects/project_index.html
@@ -3,19 +3,19 @@
 {% block page_content %}
 <h1>Projects</h1>
 <div class="row">
-{% for project in projects %}
-    <div class="col-md-4">
-        <div class="card mb-2">
-            <div class="card-body">
-                <h5 class="card-title">{{ project.title }}</h5>
-                <p class="card-text">{{ project.description }}</p>
-                <a href="{% url 'project_detail' project.pk %}"
-                   class="btn btn-primary">
-                    Read More
-                </a>
-            </div>
-        </div>
+  {% for project in projects %}
+  <div class="col-md-4 d-flex align-items-stretch">
+    <div class="card mb-2 flex-fill">
+      {% if project.image %}
+      <img class="card-img-top" src="{{ project.image.url }}" alt="{{ project.title }}" style="height: 200px; object-fit: cover;">
+      {% endif %}
+      <div class="card-body">
+        <h5 class="card-title">{{ project.title }}</h5>
+        <p class="card-text">{{ project.description }}</p>
+        <a href="{% url 'project_detail' project.pk %}" class="btn btn-primary">Read More</a>
+      </div>
     </div>
-    {% endfor %}
+  </div>
+  {% endfor %}
 </div>
 {% endblock %}
